[UPDATE] 풀숲 기능 추가

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
       </div>
     </nav>
     <section class="scroll-section" id="scroll-section-0">
-      <h1 class="sticky-elem title-message">👋</h1>
+      <div class="sticky-elem title-message">
+        <h1>👋</h1>
+      </div>
       <div class="sticky-elem scroll-message">
         <div class="scroll-message-contain">
           스크롤을 해주세요
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" height="30" height="100" viewBox="0 0 129 129"
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#888" height="30" viewBox="0 0 129 129"
             xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129">
             <g>
               <path
@@ -62,111 +64,97 @@
           </svg>
         </div>
       </div>
-  </div>
-  <div class="sticky-elem main-message a">
-    <p>온전히 빠져들게 하는<br>최고급 세라믹</p>
-  </div>
-  <div class="sticky-elem sticky-elem-canvas">
-    <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
-  </div>
-  <div class="sticky-elem main-message a">
-    <p>온전히 빠져들게 하는<br>최고급 세라믹</p>
-  </div>
-  <div class="sticky-elem main-message b">
-    <p>주변 맛을 느끼게 해주는<br>주변 맛 허용 모드</p>
-  </div>
-  <div class="sticky-elem main-message c">
-    <p>온종일 편안한<br>맞춤형 손잡이</p>
-  </div>
-  <div class="sticky-elem main-message d">
-    <p>새롭게 입가를<br>찾아온 매혹</p>
-  </div>
-  </section>
-  <section class="scroll-section" id="scroll-section-1">
-    <p class="description">
-      <strong>보통 스크롤 영역</strong>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae est ipsa minima, eligendi error cum vel dolorum
-      pariatur officia facilis ipsam voluptatibus ad quasi porro quod quisquam quidem tempora accusantium accusamus,
-      quaerat aliquam velit exercitationem incidunt? Id vitae quisquam saepe quasi accusantium tempore enim! Aperiam
-      dolorum a vero repellat dolor, inventore ab odit totam molestias expedita? Enim quia dolor maiores veniam ea!
-      Quam illo, est incidunt ipsa reiciendis modi quisquam reprehenderit fuga velit dolorem odit sequi autem
-      blanditiis, ullam commodi quibusdam. Accusamus repellat aperiam quis neque laudantium, dignissimos hic nisi
-      magnam praesentium enim beatae sint architecto cum numquam inventore rerum animi sed nostrum quae delectus,
-      voluptas molestiae placeat aliquid! Vel quaerat error officiis magnam dolorum iste aspernatur at est! Quo,
-      consequuntur? Reiciendis, dolor. Quo at cupiditate in iure obcaecati voluptatum vel ea! Ab vel harum facere hic
-      fuga ducimus sapiente dolore dolorem, nobis sint perferendis cumque esse! Omnis fugiat sint error laborum
-      eveniet labore nam ducimus quisquam in repudiandae impedit excepturi dignissimos tenetur libero placeat rerum
-      maxime tempore, aut nihil. Qui, quam? Voluptate fuga possimus itaque quas nesciunt iste, facilis mollitia illo
-      qui placeat temporibus inventore obcaecati. Recusandae, sequi dignissimos in natus eum maiores dolorem, deleniti
-      nobis accusantium, aspernatur beatae.
-    </p>
-  </section>
-  <section class="scroll-section" id="scroll-section-2">
-    <div class="sticky-elem sticky-elem-canvas">
-      <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
-    </div>
-    <div class="sticky-elem main-message a">
-      <p>
-        <small>편안한 촉감</small>
-        입과 하나 되다
+      <div class="sticky-elem right-grass-img a"></div>
+      <div class="sticky-elem right-grass-img b"></div>
+      <div class="sticky-elem right-grass-img c"></div>
+      <div class="sticky-elem right-grass-img d"></div>
+      <div class="sticky-elem right-grass-img e"></div>
+    </section>
+    <section class="scroll-section" id="scroll-section-1">
+      <p class="description">
+        <strong>보통 스크롤 영역</strong>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae est ipsa minima, eligendi error cum vel dolorum
+        pariatur officia facilis ipsam voluptatibus ad quasi porro quod quisquam quidem tempora accusantium accusamus,
+        quaerat aliquam velit exercitationem incidunt? Id vitae quisquam saepe quasi accusantium tempore enim! Aperiam
+        dolorum a vero repellat dolor, inventore ab odit totam molestias expedita? Enim quia dolor maiores veniam ea!
+        Quam illo, est incidunt ipsa reiciendis modi quisquam reprehenderit fuga velit dolorem odit sequi autem
+        blanditiis, ullam commodi quibusdam. Accusamus repellat aperiam quis neque laudantium, dignissimos hic nisi
+        magnam praesentium enim beatae sint architecto cum numquam inventore rerum animi sed nostrum quae delectus,
+        voluptas molestiae placeat aliquid! Vel quaerat error officiis magnam dolorum iste aspernatur at est! Quo,
+        consequuntur? Reiciendis, dolor. Quo at cupiditate in iure obcaecati voluptatum vel ea! Ab vel harum facere hic
+        fuga ducimus sapiente dolore dolorem, nobis sint perferendis cumque esse! Omnis fugiat sint error laborum
+        eveniet labore nam ducimus quisquam in repudiandae impedit excepturi dignissimos tenetur libero placeat rerum
+        maxime tempore, aut nihil. Qui, quam? Voluptate fuga possimus itaque quas nesciunt iste, facilis mollitia illo
+        qui placeat temporibus inventore obcaecati. Recusandae, sequi dignissimos in natus eum maiores dolorem, deleniti
+        nobis accusantium, aspernatur beatae.
       </p>
-    </div>
-    <div class="sticky-elem desc-message b">
-      <p>
-        편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은
-        어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+    </section>
+    <section class="scroll-section" id="scroll-section-2">
+      <div class="sticky-elem sticky-elem-canvas">
+        <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
+      </div>
+      <div class="sticky-elem main-message a">
+        <p>
+          <small>편안한 촉감</small>
+          입과 하나 되다
+        </p>
+      </div>
+      <div class="sticky-elem desc-message b">
+        <p>
+          편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은
+          어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+        </p>
+        <div class="pin"></div>
+      </div>
+      <div class="sticky-elem desc-message c">
+        <p>
+          디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
+        </p>
+        <div class="pin"></div>
+      </div>
+    </section>
+    <section class="scroll-section" id="scroll-section-3">
+      <p class="mid-message">
+        <strong>Retina 머그</strong><br>
+        아이디어를 광활하게 펼칠<br>
+        아름답고 부드러운 음료 공간.
       </p>
-      <div class="pin"></div>
-    </div>
-    <div class="sticky-elem desc-message c">
-      <p>
-        디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
+      <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
+      <p class="canvas-caption">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et,
+        ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto
+        in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus
+        dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora
+        repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error
+        deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas
+        inventore perferendis iusto explicabo animi eos ratione obcaecati.
       </p>
-      <div class="pin"></div>
-    </div>
-  </section>
-  <section class="scroll-section" id="scroll-section-3">
-    <p class="mid-message">
-      <strong>Retina 머그</strong><br>
-      아이디어를 광활하게 펼칠<br>
-      아름답고 부드러운 음료 공간.
-    </p>
-    <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
-    <p class="canvas-caption">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et,
-      ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto
-      in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus
-      dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora
-      repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error
-      deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas
-      inventore perferendis iusto explicabo animi eos ratione obcaecati.
-    </p>
-  </section>
-  <section class="normal-content">
-    <p class="mid-message">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae magnam in maiores voluptatem
-      ducimus, assumenda voluptatibus dolorum. Libero laboriosam, ab maiores rem a eos nostrum, est aspernatur odio
-      numquam aliquam explicabo vel quis totam, illum qui beatae expedita corrupti deserunt quo veniam. Id suscipit
-      corrupti, cumque asperiores aliquam officiis magnam totam unde, odio quisquam nihil officia ullam voluptate
-      assumenda rerum. Quaerat nostrum a deleniti magnam soluta libero nihil enim quia voluptates. Neque, facere.
-      Labore aliquam amet est omnis quas provident vitae ut sed repellat, quasi voluptatum, ipsum nam blanditiis
-      laborum accusantium architecto reprehenderit commodi beatae vel iusto asperiores neque.
-    </p>
-  </section>
-  <section class="normal-content">
-    <p class="mid-message">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae magnam in maiores voluptatem
-      ducimus, assumenda voluptatibus dolorum. Libero laboriosam, ab maiores rem a eos nostrum, est aspernatur odio
-      numquam aliquam explicabo vel quis totam, illum qui beatae expedita corrupti deserunt quo veniam. Id suscipit
-      corrupti, cumque asperiores aliquam officiis magnam totam unde, odio quisquam nihil officia ullam voluptate
-      assumenda rerum. Quaerat nostrum a deleniti magnam soluta libero nihil enim quia voluptates. Neque, facere.
-      Labore aliquam amet est omnis quas provident vitae ut sed repellat, quasi voluptatum, ipsum nam blanditiis
-      laborum accusantium architecto reprehenderit commodi beatae vel iusto asperiores neque.
-    </p>
-  </section>
-  <footer class="footer">
-    2020, 1분코딩
-  </footer>
+    </section>
+    <section class="normal-content">
+      <p class="mid-message">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae magnam in maiores voluptatem
+        ducimus, assumenda voluptatibus dolorum. Libero laboriosam, ab maiores rem a eos nostrum, est aspernatur odio
+        numquam aliquam explicabo vel quis totam, illum qui beatae expedita corrupti deserunt quo veniam. Id suscipit
+        corrupti, cumque asperiores aliquam officiis magnam totam unde, odio quisquam nihil officia ullam voluptate
+        assumenda rerum. Quaerat nostrum a deleniti magnam soluta libero nihil enim quia voluptates. Neque, facere.
+        Labore aliquam amet est omnis quas provident vitae ut sed repellat, quasi voluptatum, ipsum nam blanditiis
+        laborum accusantium architecto reprehenderit commodi beatae vel iusto asperiores neque.
+      </p>
+    </section>
+    <section class="normal-content">
+      <p class="mid-message">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae magnam in maiores voluptatem
+        ducimus, assumenda voluptatibus dolorum. Libero laboriosam, ab maiores rem a eos nostrum, est aspernatur odio
+        numquam aliquam explicabo vel quis totam, illum qui beatae expedita corrupti deserunt quo veniam. Id suscipit
+        corrupti, cumque asperiores aliquam officiis magnam totam unde, odio quisquam nihil officia ullam voluptate
+        assumenda rerum. Quaerat nostrum a deleniti magnam soluta libero nihil enim quia voluptates. Neque, facere.
+        Labore aliquam amet est omnis quas provident vitae ut sed repellat, quasi voluptatum, ipsum nam blanditiis
+        laborum accusantium architecto reprehenderit commodi beatae vel iusto asperiores neque.
+      </p>
+    </section>
+    <footer class="footer">
+      2020, 1분코딩
+    </footer>
   </div>
 
   <script src="js/main.js"></script>
