[UPDATE] grass 초기 left 구하기

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <div class="sticky-elem right-grass-img c"></div>
       <div class="sticky-elem right-grass-img d"></div>
       <div class="sticky-elem right-grass-img e"></div>
+      <div class="sticky-elem right-grass-img f"></div>
+      <div class="sticky-elem right-grass-img g"></div>
+      <div class="sticky-elem right-grass-img h"></div>
     </section>
     <section class="scroll-section" id="scroll-section-1">
       <p class="description">
