:art: Improve structure
- 잔디자체를 stick 하게 하지 않고 가운데 큰 박스를 만들고 그것이 줄어드는 구조로 변경

--- a/index.html
+++ b/index.html
@@ -64,14 +64,29 @@
           </svg>
         </div>
       </div>
-      <div class="sticky-elem right-grass-img a"></div>
-      <div class="sticky-elem right-grass-img b"></div>
-      <div class="sticky-elem right-grass-img c"></div>
-      <div class="sticky-elem right-grass-img d"></div>
-      <div class="sticky-elem right-grass-img e"></div>
-      <div class="sticky-elem right-grass-img f"></div>
-      <div class="sticky-elem right-grass-img g"></div>
-      <div class="sticky-elem right-grass-img h"></div>
+      <div class="sticky-elem grass-imgs">
+        <div class="grass-group">
+          <div class="right-grass-img a"></div>
+          <div class="right-grass-img b"></div>
+          <div class="right-grass-img c"></div>
+          <div class="right-grass-img d"></div>
+          <div class="right-grass-img e"></div>
+          <div class="right-grass-img f"></div>
+          <div class="right-grass-img g"></div>
+          <div class="right-grass-img h"></div>
+        </div>
+        <div class="checking-bg"></div>
+        <div class="grass-group">
+          <div class="right-grass-img a"></div>
+          <div class="right-grass-img b"></div>
+          <div class="right-grass-img c"></div>
+          <div class="right-grass-img d"></div>
+          <div class="right-grass-img e"></div>
+          <div class="right-grass-img f"></div>
+          <div class="right-grass-img g"></div>
+          <div class="right-grass-img h"></div>
+        </div>
+      </div>
     </section>
     <section class="scroll-section" id="scroll-section-1">
       <p class="description">
