:art: Improve structure
- 잔디 자체의 css 를 오른쪽 왼쪽 동일하게 하기 위해서 grass-img 로 통일

--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
       </div>
       <div class="sticky-elem grass-imgs">
         <div class="grass-group">
-          <div class="right-grass-img a"></div>
-          <div class="right-grass-img b"></div>
-          <div class="right-grass-img c"></div>
-          <div class="right-grass-img d"></div>
-          <div class="right-grass-img e"></div>
-          <div class="right-grass-img f"></div>
-          <div class="right-grass-img g"></div>
-          <div class="right-grass-img h"></div>
+          <div class="grass-img a"></div>
+          <div class="grass-img b"></div>
+          <div class="grass-img c"></div>
+          <div class="grass-img d"></div>
+          <div class="grass-img e"></div>
+          <div class="grass-img f"></div>
+          <div class="grass-img g"></div>
+          <div class="grass-img h"></div>
         </div>
         <div class="checking-bg"></div>
         <div class="grass-group">
-          <div class="right-grass-img a"></div>
-          <div class="right-grass-img b"></div>
-          <div class="right-grass-img c"></div>
-          <div class="right-grass-img d"></div>
-          <div class="right-grass-img e"></div>
-          <div class="right-grass-img f"></div>
-          <div class="right-grass-img g"></div>
-          <div class="right-grass-img h"></div>
+          <div class="grass-img a"></div>
+          <div class="grass-img b"></div>
+          <div class="grass-img c"></div>
+          <div class="grass-img d"></div>
+          <div class="grass-img e"></div>
+          <div class="grass-img f"></div>
+          <div class="grass-img g"></div>
+          <div class="grass-img h"></div>
         </div>
       </div>
     </section>
