:lipstick: Add or update the UI and style files.
- 잔디와 가운데 box 구조와 css 완성

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </svg>
         </div>
       </div>
-      <div class="sticky-elem grass-imgs">
+      <div class="grass-container">
         <div class="grass-group">
           <div class="grass-img a"></div>
           <div class="grass-img b"></div>
