:lipstick: Add or update the UI and style files.
-잔디 위치 조정 1

--- a/index.html
+++ b/index.html
@@ -66,25 +66,21 @@
       </div>
       <div class="grass-container">
         <div class="grass-group">
-          <div class="grass-img a"></div>
-          <div class="grass-img b"></div>
-          <div class="grass-img c"></div>
-          <div class="grass-img d"></div>
-          <div class="grass-img e"></div>
-          <div class="grass-img f"></div>
-          <div class="grass-img g"></div>
-          <div class="grass-img h"></div>
+          <div class="grass-img no1"></div>
+          <div class="grass-img no2"></div>
+          <div class="grass-img no3"></div>
+          <div class="grass-img no4"></div>
+          <div class="grass-img no5"></div>
+          <div class="grass-img no6"></div>
         </div>
         <div class="checking-bg"></div>
         <div class="grass-group">
-          <div class="grass-img a"></div>
-          <div class="grass-img b"></div>
-          <div class="grass-img c"></div>
-          <div class="grass-img d"></div>
-          <div class="grass-img e"></div>
-          <div class="grass-img f"></div>
-          <div class="grass-img g"></div>
-          <div class="grass-img h"></div>
+          <div class="grass-img no7"></div>
+          <div class="grass-img no8"></div>
+          <div class="grass-img no9"></div>
+          <div class="grass-img no10"></div>
+          <div class="grass-img no11"></div>
+          <div class="grass-img no12"></div>
         </div>
       </div>
     </section>
